force-app/main/default/objects/Contract/fields/All_VAPs_not_taken_up__c.field-meta.xml
<CustomField>
    <fullName>All_VAPs_not_taken_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All VAPs not taken up</label>
    <type>Checkbox</type>
</CustomField>