force-app/main/default/objects/Contract/fields/Alternative_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Number__c</fullName>
    <formula>Account.Alternative_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternative Number</label>
    <type>Text</type>
</CustomField>