force-app/main/default/objects/Contract/fields/Annexe_D_PreQ__c.field-meta.xml
<CustomField>
    <fullName>Annexe_D_PreQ__c</fullName>
    <label>Annexe D PreQ</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>