force-app/main/default/objects/Contract/fields/Assign_Owner_Using_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Assign_Owner_Using_Assignment_Rules__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Assign Owner Using Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>