force-app/main/default/objects/Contract/fields/Bank_commission_effective_date__c.field-meta.xml
<CustomField>
    <fullName>Bank_commission_effective_date__c</fullName>
    <label>Bank commission effective date</label>
    <type>DateTime</type>
</CustomField>