force-app/main/default/objects/Contract/fields/BetterLife_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>BetterLife_Entity_ID__c</fullName>
    <label>BetterLife Entity ID</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>