force-app/main/default/objects/Contract/fields/BetterSure_Home__c.field-meta.xml
<CustomField>
    <fullName>BetterSure_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BetterSure Home</label>
    <type>Checkbox</type>
</CustomField>