force-app/main/default/objects/Contract/fields/BetterSure_Home_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>BetterSure_Home_Effective_Date__c</fullName>
    <label>BetterSure Home Effective Date</label>
    <type>DateTime</type>
</CustomField>