force-app/main/default/objects/Contract/fields/BetterSure_Home_Incentive__c.field-meta.xml
<CustomField>
    <fullName>BetterSure_Home_Incentive__c</fullName>
    <label>BetterSure Home Incentive</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>