force-app/main/default/objects/Contract/fields/BLOS_Agreement_Received__c.field-meta.xml
<CustomField>
    <fullName>BLOS_Agreement_Received__c</fullName>
    <label>BLOS Agreement Received</label>
    <type>DateTime</type>
</CustomField>