force-app/main/default/objects/Contract/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <formula>TEXT(Account.Business_Model__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Model</label>
    <type>Text</type>
</CustomField>