force-app/main/default/objects/Contract/fields/Communications_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Communications_Management_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Communications Management Fee</label>
    <type>Checkbox</type>
</CustomField>