force-app/main/default/objects/Contract/fields/Communications_Management_Fee_Value__c.field-meta.xml
<CustomField>
    <fullName>Communications_Management_Fee_Value__c</fullName>
    <label>Communications Management Fee Value</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>