force-app/main/default/objects/Contract/fields/Company_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Registration_Number__c</fullName>
    <formula>Account.Company_Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Registration Number</label>
    <type>Text</type>
</CustomField>