force-app/main/default/objects/Contract/fields/Contract_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Cancelled_Date__c</fullName>
    <label>Contract Cancelled Date</label>
    <type>DateTime</type>
</CustomField>