force-app/main/default/objects/Contract/fields/Date_Of_Last_Certificate_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Last_Certificate_Issued__c</fullName>
    <label>Date Of Last Certificate Issued</label>
    <type>DateTime</type>
</CustomField>