force-app/main/default/objects/Contract/fields/DM_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Cancellation_Date__c</fullName>
    <label>DM Cancellation Date</label>
    <type>DateTime</type>
</CustomField>