force-app/main/default/objects/Contract/fields/DM_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Contract_Start_Date__c</fullName>
    <label>DM Contract Start Date</label>
    <type>DateTime</type>
</CustomField>