force-app/main/default/objects/Contract/fields/DM_Debit_Order_Authority__c.field-meta.xml
<CustomField>
    <fullName>DM_Debit_Order_Authority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Debit Order Authority</label>
    <type>Checkbox</type>
</CustomField>