force-app/main/default/objects/Contract/fields/DM_Fee__c.field-meta.xml
<CustomField>
    <fullName>DM_Fee__c</fullName>
    <label>DM Fee</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>