force-app/main/default/objects/Contract/fields/DM_Prefix__c.field-meta.xml
<CustomField>
    <fullName>DM_Prefix__c</fullName>
    <label>DM Prefix</label>
    <type>TextArea</type>
</CustomField>