force-app/main/default/objects/Contract/fields/Edoc_Debit_Order_Authority__c.field-meta.xml
<CustomField>
    <fullName>Edoc_Debit_Order_Authority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edoc Debit Order Authority</label>
    <type>Checkbox</type>
</CustomField>