force-app/main/default/objects/Contract/fields/Edoc_Fee__c.field-meta.xml
<CustomField>
    <fullName>Edoc_Fee__c</fullName>
    <label>Edoc Fee</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>