force-app/main/default/objects/Contract/fields/Electronic_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Processing_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic Processing Fee</label>
    <type>Checkbox</type>
</CustomField>