force-app/main/default/objects/Contract/fields/Electronic_Processing_Fee_Value__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Processing_Fee_Value__c</fullName>
    <label>Electronic Processing Fee Value</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>