force-app/main/default/objects/Contract/fields/Email_Live_Replies__c.field-meta.xml
<CustomField>
    <fullName>Email_Live_Replies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Live Replies</label>
    <type>Checkbox</type>
</CustomField>