force-app/main/default/objects/Contract/fields/Future_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Billing_Date__c</fullName>
    <label>Future Billing Date</label>
    <type>DateTime</type>
</CustomField>