force-app/main/default/objects/Contract/fields/Home_Owners_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Home_Owners_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Owners Insurance</label>
    <type>Checkbox</type>
</CustomField>