force-app/main/default/objects/Contract/fields/Home_Owners_Insurance_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Home_Owners_Insurance_Effective_Date__c</fullName>
    <label>Home Owners Insurance Effective Date</label>
    <type>DateTime</type>
</CustomField>