force-app/main/default/objects/Contract/fields/Home_Owners_Insurance_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Home_Owners_Insurance_Incentive__c</fullName>
    <label>Home Owners Insurance Incentive</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>