force-app/main/default/objects/Contract/fields/ID_Number_Passport__c.field-meta.xml
<CustomField>
    <fullName>ID_Number_Passport__c</fullName>
    <formula>Account.ID_Number_Passport__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Number / Passport</label>
    <type>Text</type>
</CustomField>