force-app/main/default/objects/Contract/fields/Internal_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Reference_Number__c</fullName>
    <formula>Account.Internal_Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Reference Number</label>
    <type>Text</type>
</CustomField>