force-app/main/default/objects/Contract/fields/Is_VAT_Registered__c.field-meta.xml
<CustomField>
    <fullName>Is_VAT_Registered__c</fullName>
    <formula>Account.Is_VAT_Registered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is VAT Registered?</label>
    <type>Checkbox</type>
</CustomField>