force-app/main/default/objects/Contract/fields/Manual_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Manual_Processing_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Processing Fee</label>
    <type>Checkbox</type>
</CustomField>