force-app/main/default/objects/Contract/fields/Manual_Processing_Fee_value__c.field-meta.xml
<CustomField>
    <fullName>Manual_Processing_Fee_value__c</fullName>
    <label>Manual Processing Fee value</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>