force-app/main/default/objects/Contract/fields/Monthly_PI_Premium__c.field-meta.xml
<CustomField>
    <fullName>Monthly_PI_Premium__c</fullName>
    <label>Monthly PI Premium</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>