force-app/main/default/objects/Contract/fields/Morgtage_Protection_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Morgtage_Protection_Incentive__c</fullName>
    <label>Mortgage Protection Incentive</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>