force-app/main/default/objects/Contract/fields/Mortage_Protection__c.field-meta.xml
<CustomField>
    <fullName>Mortage_Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortage Protection</label>
    <type>Checkbox</type>
</CustomField>