force-app/main/default/objects/Contract/fields/Mortgage_Alliance_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Alliance_Effective_Date__c</fullName>
    <label>Mortgage Alliance Effective Date</label>
    <type>DateTime</type>
</CustomField>