force-app/main/default/objects/Contract/fields/Mortgage_Alliance_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Alliance_Incentive__c</fullName>
    <label>Mortgage Alliance Incentive</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>