force-app/main/default/objects/Contract/fields/Mortgage_Protection__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortgage Protection</label>
    <type>Checkbox</type>
</CustomField>