force-app/main/default/objects/Contract/fields/Mortgage_Protection_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Protection_Effective_Date__c</fullName>
    <label>Mortgage Protection Effective Date</label>
    <type>DateTime</type>
</CustomField>