force-app/main/default/objects/Contract/fields/Original_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Start_Date__c</fullName>
    <label>Original Contract Start Date</label>
    <type>Date</type>
</CustomField>