force-app/main/default/objects/Contract/fields/Other_VAPs__c.field-meta.xml
<CustomField>
    <fullName>Other_VAPs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other VAPs</label>
    <type>Checkbox</type>
</CustomField>