force-app/main/default/objects/Contract/fields/Own_Professional_Indemnity_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Own_Professional_Indemnity_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Own Professional Indemnity Insurance</label>
    <type>Checkbox</type>
</CustomField>