force-app/main/default/objects/Contract/fields/PamafAdendum__c.field-meta.xml
<CustomField>
    <fullName>PamafAdendum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PamafAdendum</label>
    <type>Checkbox</type>
</CustomField>