force-app/main/default/objects/Contract/fields/Parent_Commission_Entity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Commission_Entity__c</fullName>
    <formula>Account.ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Commission Entity</label>
    <type>Text</type>
</CustomField>