force-app/main/default/objects/Contract/fields/Payment_Arrangement_Source__c.field-meta.xml
<CustomField>
    <fullName>Payment_Arrangement_Source__c</fullName>
    <label>Payment Arrangement Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>