force-app/main/default/objects/Contract/fields/Personal_Loans__c.field-meta.xml
<CustomField>
    <fullName>Personal_Loans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Loans</label>
    <type>Checkbox</type>
</CustomField>