force-app/main/default/objects/Contract/fields/Personal_Loans_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Personal_Loans_Effective_Date__c</fullName>
    <label>Personal Loans Effective Date</label>
    <type>DateTime</type>
</CustomField>