force-app/main/default/objects/Contract/fields/Personal_Loans_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Personal_Loans_Incentive__c</fullName>
    <label>Personal Loans Incentive</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>