force-app/main/default/objects/Contract/fields/Physical_same_as_Postal__c.field-meta.xml
<CustomField>
    <fullName>Physical_same_as_Postal__c</fullName>
    <formula>Account.Physical_same_as_Postal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical same as Postal</label>
    <type>Checkbox</type>
</CustomField>