force-app/main/default/objects/Contract/fields/PI_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>PI_Amount_Paid__c</fullName>
    <label>PI Amount Paid</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>