force-app/main/default/objects/Contract/fields/PI_Arrear_Amount__c.field-meta.xml
<CustomField>
    <fullName>PI_Arrear_Amount__c</fullName>
    <label>PI Arrear Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>