force-app/main/default/objects/Contract/fields/PI_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>PI_Effective_Date__c</fullName>
    <label>PI Effective Date</label>
    <type>DateTime</type>
</CustomField>