force-app/main/default/objects/Contract/fields/PI_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>PI_Expiry_Date__c</fullName>
    <label>PI Expiry Date</label>
    <type>DateTime</type>
</CustomField>