force-app/main/default/objects/Contract/fields/PI_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>PI_Installment_Date__c</fullName>
    <label>PI Installment Date</label>
    <type>DateTime</type>
</CustomField>