force-app/main/default/objects/Contract/fields/PI_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>PI_Payment_Frequency__c</fullName>
    <label>PI Payment Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>