force-app/main/default/objects/Contract/fields/PreQ_Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>PreQ_Number_of_Users__c</fullName>
    <label>PreQ Number of Users</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>