force-app/main/default/objects/Contract/fields/Previous_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Trading_Name__c</fullName>
    <formula>Account.Previous_Trading_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Trading Name</label>
    <type>Text</type>
</CustomField>