force-app/main/default/objects/Contract/fields/Recovery_arrangements__c.field-meta.xml
<CustomField>
    <fullName>Recovery_arrangements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recovery arrangements</label>
    <type>Checkbox</type>
</CustomField>