force-app/main/default/objects/Contract/fields/Recovery_Comments__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Comments__c</fullName>
    <label>Recovery Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>