force-app/main/default/objects/Contract/fields/Registered_Name__c.field-meta.xml
<CustomField>
    <fullName>Registered_Name__c</fullName>
    <formula>Account.Registered_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered Name</label>
    <type>Text</type>
</CustomField>