force-app/main/default/objects/Contract/fields/Share_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Share_Incentive__c</fullName>
    <label>Share Incentive</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>