force-app/main/default/objects/Contract/fields/Share_Incentive_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Share_Incentive_End_Date__c</fullName>
    <label>Share Incentive End Date</label>
    <type>DateTime</type>
</CustomField>