force-app/main/default/objects/Contract/fields/Share_Incentive_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Share_Incentive_Start_Date__c</fullName>
    <label>Share Incentive Start Date</label>
    <type>DateTime</type>
</CustomField>