force-app/main/default/objects/Contract/fields/Shipping_same_as_Billing__c.field-meta.xml
<CustomField>
    <fullName>Shipping_same_as_Billing__c</fullName>
    <formula>Account.Physical_same_as_Postal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping same as Billing</label>
    <type>Checkbox</type>
</CustomField>