force-app/main/default/objects/Contract/fields/Short_Name_for_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Short_Name_for_Marketing__c</fullName>
    <formula>Account.Marketing_From_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Name for Marketing</label>
    <type>Text</type>
</CustomField>