force-app/main/default/objects/Contract/fields/Source_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Source_Of_Payment__c</fullName>
    <label>Source Of Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>