force-app/main/default/objects/Contract/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <formula>Account.Surname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surname</label>
    <type>Text</type>
</CustomField>