force-app/main/default/objects/Contract/fields/VAPs_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>VAPs_Effective_Date__c</fullName>
    <label>VAPs Effective Date</label>
    <type>DateTime</type>
</CustomField>